# stellar-escrow-dapp

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs  test.rs
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: CreateDealFolio.jsx  DealsLedger.jsx  Header.jsx  SealMark.jsx  ToastStack.jsx  TrustGauge.jsx
frontend/src/lib/: config.js  soroban.js  useDemoLedger.js  useDemoLedger.test.js  wallet.js
frontend/src/styles/: index.css
scripts/: build.sh  deploy.sh
